clusters/prod-cluster/organizations/numen-games/engage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numen-games-engage-deployment
  namespace: numen-games
  labels:
    environment: pro
    app: hyperfy2-numen-games-engage
    pod-type: hyperfy2-numen-games-engage
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engage
      environment: pro
      pod-type: hyperfy2-numen-games-engage
  template:
    metadata:
      labels:
        app: engage
        environment: pro
        pod-type: hyperfy2-numen-games-engage
    spec:
      serviceAccountName: numen-games-aws-secret-manager-sa
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numen-games-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numen-games-engage-aws-secrets
      containers:
        - name: hyperfy2-numen-games-engage
          image: ghcr.io/numengames/numinia-hyperfy2:sha-3eb1f82755fae4b185171dc7109e89f4ab8982d3
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: world1
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
