clusters/prod-cluster/organizations/numen-games/engage/base/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hyperfy2-numen-games-engage-route
  namespace: numen-games
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`engage.numen.games`)"
      kind: Rule
      services:
        - name: "hyperfy2-numen-games-engage-service"
          port: 3000
  tls:
    secretName: numen-games-tls
